# demo-git

./: .gitignore  README.md  pyproject.toml
src/components/: components01.py  components02.py
src/lib/: lib01.py
src/plugins/: plugin01.py
